add dependency to activiti-parent to remove duplications (#93)